tests/ui/cast/cast-array-issue-138836.stderr
error[E0308]: mismatched types
  --> $DIR/cast-array-issue-138836.rs:4:13
   |
LL |     let c = b as *const [u32; 3];
   |             ^^^^^^^^^^^^^^^^^^^^ expected `[u8; 3]`, found `[u32; 3]`
   |
   = note: expected array `[u8; 3]`
              found array `[u32; 3]`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
